--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	
 <head>
   <meta charset=utf-8>
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles/meyer-reset.css">
   <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
   <title>Forms</title>
@@ -13,9 +14,9 @@
     <h1>RESPONSIVE WEB DESIGN, WHY?</h1>
   </header>
   <article>
-    <p>To have a Responsive Web Design site is not only the way of the future, it's also the best way for your visitors to experience what you have to offer, and look fantastic on any device, large or small at the same time! Once you personally, knowingly, navigate on a Responsive Web page, and then go back to a non-responsive one, you'll see the powers and magnificence of Responsive Web Design.</p>
+    <p>To have a Responsive Web Design included on your site is not only the way of the future, it's also the best way for your visitors to experience what you have to offer, and look fantastic on any device, large or small at the same time! Once you personally, knowingly, navigate on a Responsive Web page, and then go back to a non-responsive one, you will see the powers and magnificence of Responsive Web Design.</p>
     
-    <p>With todays ever changing implements of web tools, and web demands Responsive Web Design delivers on all aspects. Websites on your phone, tablet, PC, or laptop look and respond beautifully. Responsive Web Design not only engages the visitor, also it makes the owner very grateful to have the availability for them to be able to spread their messages far and wide across a ray of devices. Responsive Web Design is the way to a better web experience, for everyone.</p>
+    <p>With todays ever changing implements of web tools, and web demands Responsive Web Design delivers on all aspects. Websites on your phone, tablet, desktop, or laptop look and respond beautifully. Responsive Web Design not only engages the visitor, also it makes the owner very grateful to have the availability for them to be able to spread their messages far and wide across a ray of devices. Responsive Web Design is the way to a better web experience for everyone, on all sides of the web. A richer, fuller experience. Another benefit is it improves your SEO, and keeps the user to stick around longer on your page, therefore giving you, the owner, a higher ranking in SERP's.</p>
   </article>
   
   <div class="section group">
@@ -46,7 +47,7 @@
         <input type="radio" name="responsive" value="no">
         </label>
       </fieldset>
-      
+      <br>
       <fieldset>
         <legend>Check boxes that apply</legend>
         <label>Owner
@@ -62,6 +63,7 @@
         <input type="checkbox" name="apply" value="designer">
         </label>
       </fieldset>
+      <input class="submit" type="submit" value="Submit">
     </form>
   </div>
   
