Added pattern attrib. to email input

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <form method="get">
       <div class="col span_1_of_3">
       <label>Request More Info:
-        <input type="email" name="email" placeholder="Email">
+        <input type="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" placeholder="Email">
       </label>
       </div>
       
