--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <article>
     <p>To have a Responsive Web Design included on your site is not only the way of the future, it's also the best way for your visitors to experience what you have to offer, and look fantastic on any device, large or small at the same time! Once you personally, knowingly, navigate on a Responsive Web page, and then go back to a non-responsive one, you will see the powers and magnificence of Responsive Web Design.</p>
     
-    <p>With todays ever changing implements of web tools, and web demands Responsive Web Design delivers on all aspects. Websites on your phone, tablet, desktop, or laptop look and respond beautifully. Responsive Web Design not only engages the visitor, also it makes the owner very grateful to have the availability for them to be able to spread their messages far and wide across a ray of devices. Responsive Web Design is the way to a better web experience for everyone, on all sides of the web. A richer, fuller experience. Another benefit is it improves your SEO, and keeps the user to stick around longer on your page, therefore giving you, the owner, a higher ranking in SERP's.</p>
+    <p>With todays ever changing implements of web tools, and web demands Responsive Web Design delivers on all aspects. Websites on your phone, tablet, desktop, or laptop look and respond beautifully. Responsive Web Design not only engages the visitor, it also makes the owner very grateful to have the availability for them to be able to spread their messages far and wide across array of devices. Responsive Web Design is the way to a better web experience for everyone, on all sides of the web. A richer, fuller experience. Another benefit is it improves your SEO, and keeps the user to stick around longer on your page, therefore giving you, the owner, a higher ranking in SERP's. Resizing? No problem. RWD also covers your page to respond to any size, and keep it looking good.</p>
   </article>
   
   <div class="section group">
     <form method="get">
       <div class="col span_1_of_3">
       <label>Request More Info:
-        <input type="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" placeholder="Email" required>
+        <input type="email" name="email" autofocus pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" placeholder="Email" required>
       </label>
       </div>
       
